--- a/css/style.css
+++ b/css/style.css
@@ -316,13 +316,13 @@ h3 {
 .overlay2::before {
   position: absolute;
   content: "";
-  background-color: #69bfe7;
+  background-color: #678ea1;
   top: 0;
-  left: 0;
+  left: 0;  
   width: 100%;
   height: 100%;
   z-index: -1;
-  opacity: 0.38;
+  opacity: 0.33;
 }
 
 /* line 172, ../../Arafath/CL/january 2020/242. charity/HTML/scss/_theme-default.scss */
